email address.


2009-Dec-3 UPDATE Dick Hollenbeck <dick@softplc.com>
================================================================================
++pcbnew
    Make the source file to the specctra freerouter help panel be html, not *.h
    This makes it easier to preview the page in a browser.  Then autogenerate
    the *.h file from the html using a CMake script.


2009-Nov-05 UPDATE Jean-Pierre Charras <jean-pierre.charras@gipsa-lab.inpg.fr>
================================================================================
++pcbnew
    control of masks clearance: Pad Editor Dialog rewritten to handle mask clearances
    and a locad Net clearance

2009-Nov-5 UPDATE Dick Hollenbeck <dick@softplc.com>
================================================================================
++all
    CMakeLists.txt support for AUI.


2009-Nov-04 UPDATE Jean-Pierre Charras <jean-pierre.charras@gipsa-lab.inpg.fr>
================================================================================
++pcbnew
    Added: control of masks clearance
    - Solder mask clearance can be now defined at footprint and pad level
    - Solder paste clearance can be now defined as a global value
        and also at footprint and pad level.
        The clearance is defined by a constant value and a value proportional to the pad size.
        The final value is the sum of the 2 partial values
    Note: this is a work in progress:
        currently, the pad dialog is not finished and does not
        have an option to enter the mask values
    Planned:
        option to define a net clearance at pad level and footprint level,
        as an alternate value to the Netclasses values.
        this option could be useful to create fiducials, and for very small footprints.


2009-Nov-1 UPDATE Dick Hollenbeck <dick@softplc.com>
================================================================================
++pcbnew
  * Added exporting of netclass vias to specctra_export.